# AI_AGENT_ENGINE_FROM_SCRATCH

./: .env.example  .gitignore  .gitigonre  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirments.txt
alembic/: env.py
alembic/versions/: 8ae163fc067c_auto_migration.py
data/: agent_engine.db
infrastructure/grafana/: grafana.ini
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: prometheus.yml
src/agent_engine/api/: main.py  routes.py  schemas.py
src/agent_engine/api/templete/: index.html
src/agent_engine/config/: logger.py  settings.py
src/agent_engine/core/: agent.py  celery_app.py  conversation.py  message.py  summarizer.py  tasks.py  token_manager.py
src/agent_engine/core/agent/: agent.py  agent_config.py  agent_executor.py  agent_state.py
src/agent_engine/core/brain/: conversation.py  conversation_manager.py  conversation_stats.py  message.py  message_metadata.py
src/agent_engine/core/memory/: memory_interface.py  short_term_memory.py
src/agent_engine/database/: models.py  session.py  sql_repository.py
test/: test_agent.py  test_conversation.py  test_message.py  test_summarizer.py  test_token_manager.py
