[project]
name = "NEW_TEST_AGENT_ENGINE"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I"] # تفعيل فحص الأخطاء وترتيب الواردات (isort)

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
